Fix crash when renaming top-level entries

After commit 7781d6ef79, the model of the archive view changed to the
filter model. So we were asking `m_model` to get an index from
`currentIndex`, which instead belongs to `m_filterModel`.
The returned index is invalid and this causes a crash in the view.

BUG: 379802
FIXED-IN: 17.04.2

Differential Revision: https://phabricator.kde.org/D5869