part/part.cpp
@@ -1415,7 +1415,7 @@ void Part::slotEditFileName()
     QModelIndex currentIndex = m_view->selectionModel()->currentIndex();
     currentIndex = (currentIndex.parent().isValid())
                    ? currentIndex.parent().child(currentIndex.row(), 0)
-                   : m_model->index(currentIndex.row(), 0);
+                   : m_filterModel->index(currentIndex.row(), 0);
     m_view->openEntryEditor(currentIndex);
 }
 
